--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -10,7 +10,13 @@ permissions:
 
 jobs:
   goreleaser:
+    permissions:
+      contents: write
+      id-token: write
+      packages: write
     runs-on: ubuntu-latest
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
