--- a/.github/workflows/releaser.yml
+++ b/.github/workflows/releaser.yml
@@ -5,8 +5,7 @@ on:
     tags:
       - '*'
 
-permissions:
-  contents: write
+permissions: read-all
 
 jobs:
   goreleaser:
@@ -22,6 +21,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Docker Login
+        uses: docker/login-action@e92390c5fb421da1463c202d546fed0ec5c39f20 # v3.1.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
