--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,13 +6,13 @@ on:
     tags:
       - '*'
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run Unit Tests
-        run: go test
+  # test:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Run Unit Tests
+  #       run: go test
 
   deploy:
     runs-on: ubuntu-latest
